# frontend-assignment-service

./: .env.production  .env.staging  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  setup_react.py
.github/workflows/: azure-static-web-apps-delightful-island-003517903.yml  pr.yml
fronted-assignment-service/: package-lock.json  package.json
fronted-assignment-service/src/: App.js  index.js  theme.js
frontend-assignment-service/: .gitignore  package-lock.json  package.json
frontend-assignment-service/src/: App.js  StudentForm.js
public/: index.html
public/csvs/: students.csv  topics.csv  tutors.csv
scripts/: check-env.js
src/: App.css  App.js  index.js
src/api/: assignments.js  auth.js  dashboardStats.js  downloadAnteproyecto.js  getAnteproyectos.js  getFormAnswersById.js  getGroupById.js  getGroups.js  getMyGroups.js  getMyGroupsToReview.js  getPeriodAvailability.js  getPeriodsGroup.js  getStudentInfo.js  getStudents.js  getTeams.js  getTopics.js  getTutorEvents.js  handleAvailability.js  handlePeriods.js  handleProjects.js  handleStudents.js  handleTableData.js  handleTopics.js  handleTutors.js  ideas.js  intermeadiateProjects.js  makeEvaluator.js  notifyGroup.js  postChangePassword.js  postDescription.js  sendAvailability.js  sendGroupForm.js  unmakeEvaluator.js  updateGroups.js  updatePeriod.js  uploadProjects.js  waitForAsyncTask.js
src/assets/: title-logo.png~
src/components/: AddButton.js  AddComponentDialog.js  AddItemDialog.js  Algorithms.js  AvailabilityCalendar.js  AvailabilityCalendarAdmin.js  Home.js  (+23 more)
(+187 files in other folders)
