[tool.poetry]
name = "frontend-assignment-service"
version = "0.1.0"
description = ""
authors = ["ivanpfaab <pfaabivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
nodeenv = "^1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
